# AtlantisMajordomo

./: CMakeLists.txt  CODEOWNERS  README.md  build.py  todo.txt
include/: AppConfig.hpp  DebugLog.hpp
include/Data/: AppData.hpp  Battle.hpp  BattleRepository.hpp  Commands.hpp  DataSerializer.hpp  Event.hpp  EventRepository.hpp  Faction.hpp  FactionRepository.hpp  Item.hpp  ItemRepository.hpp  Order.hpp  OrderRepository.hpp  Region.hpp  RegionRepository.hpp  Report.hpp  ReportRepository.hpp  Skill.hpp  SkillRepository.hpp  StructInfo.hpp  StructInfoRepository.hpp  Structure.hpp  StructureRepository.hpp  Unit.hpp  UnitNew.hpp  UnitNewRepository.hpp  UnitRepository.hpp
include/Function/: CommandSimulationService.hpp  CoordinateFormattingUtils.hpp  FactionAttitudeUtils.hpp  JsonUtils.hpp  MonthUtils.hpp  OrderBusinessLogic.hpp  OrderParsingUtils.hpp  OrderWarningService.hpp  StringUtils.hpp
include/GUI/: BattlesTabContent.hpp  ControlIds.hpp  EventsTabContent.hpp  FactionsTabContent.hpp  ItemsTabContent.hpp  MainWindow.hpp  MapTabContent.hpp  OrdersEditorUtils.hpp  ReportsTabContent.hpp  SettingsDialog.hpp  SkillsTabContent.hpp  TabView.hpp
src/: AppConfig.cpp  Main.cpp
src/Data/: AppData.cpp  Battle.cpp  BattleRepository.cpp  Commands.cpp  DataSerializer.cpp  Event.cpp  EventRepository.cpp  Faction.cpp  FactionRepository.cpp  Item.cpp  ItemRepository.cpp  Order.cpp  OrderRepository.cpp  Region.cpp  RegionRepository.cpp  Report.cpp  ReportRepository.cpp  Skill.cpp  SkillRepository.cpp  StructInfo.cpp  StructInfoRepository.cpp  Structure.cpp  StructureRepository.cpp  Unit.cpp  UnitNew.cpp  UnitNewRepository.cpp  UnitRepository.cpp
src/Function/: CommandSimulationService.cpp  CoordinateFormattingUtils.cpp  FactionAttitudeUtils.cpp  JsonUtils.cpp  MonthUtils.cpp  OrderBusinessLogic.cpp  OrderParsingUtils.cpp  OrderWarningService.cpp  StringUtils.cpp
src/GUI/: AtlantisMajordomo.rc  BattlesTabContent.cpp  EventsTabContent.cpp  FactionsTabContent.cpp  ItemsTabContent.cpp  MainWindow.cpp  MapTabContent.cpp  OrdersEditorUtils.cpp  ReportsTabContent.cpp  TabView.cpp  (+2 more)
testData/: data.txt
